# rusty-ray-tracer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  ray-tracer.comp
