[package]
name = "rusty-ray-tracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
image = "0.24.6"
#shaderc = "0.8"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf"]
